--- a/style.css
+++ b/style.css
@@ -2,4 +2,31 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* object-fit: cover; */
+}
+
+h1 {
+    display: block;
+    margin-left: auto;
+}
+
+section {
+    margin: 1rem;
+    width: 500px;
+    height:400px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 0.5rem;
+}
+
+.card {
+    width:120px;
+    height: 120px;
+    border: 1px solid black;
+}
+
+.face {
+    width: 100%;
+    height: 100%;
 }
