--- a/style.css
+++ b/style.css
@@ -29,10 +29,14 @@ section {
 .card {
     width: 120px;
     height: 120px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     position: relative;
     transform-style: preserve-3d;
-    transform: rotateY(45deg);
+    transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    box-shadow: rgb(0, 0, 0, 0.2) 0px 5px 15px;
+
+    position: relative;
+
 }
 
 .face,
@@ -40,9 +44,15 @@ section {
     width: 100%;
     height: 100%;
     position: absolute;
+       
 }
 
-.back{
+.back {
     background-color: white;
-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.toggleCard {
+    transform: rotateY(180deg);
+    transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
