--- a/style.css
+++ b/style.css
@@ -29,12 +29,10 @@ section {
 .card {
     width: 120px;
     height: 120px;
-    /* border: 1px solid black; */
     position: relative;
     transform-style: preserve-3d;
     transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     box-shadow: rgb(0, 0, 0, 0.2) 0px 5px 15px;
-
     position: relative;
 
 }
@@ -44,6 +42,7 @@ section {
     width: 100%;
     height: 100%;
     position: absolute;
+    pointer-events: none;
        
 }
 
