--- a/style.css
+++ b/style.css
@@ -55,3 +55,8 @@ section {
     transform: rotateY(180deg);
     transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
+
+.flipped,
+.mached{
+    pointer-events: none;
+}
